--- a/index.css
+++ b/index.css
@@ -231,7 +231,7 @@ h6{
 .skills-section{
     background-color:#1e1345;
     background-size:cover;
-   
+    min-width:100vw;
     padding-top:50px;
     padding-bottom:50px;
 }
